--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
         /* Container for the live view */
         .viewer-container {
             position: relative;
-            width: 640px;
-            height: 480px;
+            width: 100%; /* Take full width of its parent */
+            max-width: 640px; /* Max width as before */
+            padding-top: 75%; /* 4:3 Aspect Ratio (480 / 640 = 0.75) */
+            height: 0; /* Important for padding-top trick */
             background: #000;
             border-radius: 8px;
             overflow: hidden;
@@ -37,17 +39,16 @@
             margin-bottom: 20px;
         }
 
-        video {
+        video, canvas#output {
             position: absolute;
-            top: 0; left: 0;
-            transform: scaleX(-1); /* Mirror the video */
-            display: none; /* Hidden, we draw to canvas */
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            transform: scaleX(-1); /* Mirror the video and canvas */
         }
-
-        canvas#output {
-            position: absolute;
-            top: 0; left: 0;
-            transform: scaleX(-1); /* Mirror the canvas to match interaction */
+        video {
+            display: none; /* Hidden, we draw to canvas */
         }
 
         .stats-overlay {
@@ -104,7 +105,7 @@
             <div>Status: <span id="statusDisplay">Standing</span></div>
             <div>Squats: <span id="countDisplay">0</span></div>
         </div>
-        <video id="video" width="640" height="480" autoplay playsinline></video>
+        <video id="video" autoplay playsinline></video>
         <canvas id="output"></canvas>
     </div>
 
@@ -184,6 +185,9 @@
 
             return new Promise((resolve) => {
                 video.onloadedmetadata = () => {
+                    // Update CONF with actual video dimensions
+                    CONF.videoWidth = video.videoWidth;
+                    CONF.videoHeight = video.videoHeight;
                     resolve(video);
                 };
             });
