Remove version number from the main heading in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </head>
 <body>
 
-    <h1>Squat Angle Monitor v.1.0</h1>
+    <h1>Squat Angle Monitor</h1>
     
     <!-- Live Viewer -->
     <div class="viewer-container">
