--- a/index.html
+++ b/index.html
@@ -93,11 +93,19 @@
             canvas#output { width: 100%; height: 100%; }
             .history-grid { grid-template-columns: 1fr; }
         }
+
+        .version {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            font-size: 10px;
+            color: #888;
+        }
     </style>
 </head>
 <body>
-
-    <h1>Squat Angle Monitor</h1>
+    <div class="version">v.1.0.1</div>
+    <h1>Squat Angle Monitor v.1.0.1</h1>
     
     <!-- Live Viewer -->
     <div class="viewer-container">
@@ -483,6 +491,7 @@
             ctx.lineTo(bx, by);
             ctx.lineWidth = 2;
             ctx.strokeStyle = color;
+.
             ctx.stroke();
         }
 
