--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 10px;
+            box-sizing: border-box;
         }
 
         /* Container for the live view */
@@ -48,6 +49,7 @@
             overflow: hidden;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             margin-bottom: 20px;
+            box-sizing: border-box;
         }
 
         video, canvas#output {
@@ -164,10 +166,11 @@
         /* Layout for charts */
         .charts-wrapper {
             width: 100%;
-            max-width: 1000px;
+            max-width: 640px;
             display: grid;
             grid-template-columns: 1fr;
             gap: 20px;
+            box-sizing: border-box;
         }
 
         .chart-card {
@@ -175,6 +178,9 @@
             padding: 15px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            box-sizing: border-box;
+            width: 100%;
+            min-width: 0;
         }
 
         .history-viewer {
@@ -254,11 +260,12 @@
 
         .bottom-controls {
             width: 100%;
-            max-width: 1000px;
+            max-width: 640px;
             margin-top: 20px;
             display: flex;
             gap: 10px;
             justify-content: center;
+            box-sizing: border-box;
         }
 
         .bottom-controls button {
