Add: Update version display to use dynamic deploy version in index.html

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 <body>
     <div class="header-container">
         <h1>Squat Angle Monitor</h1>
-        <div class="version">v.1.0.1</div>
+        <div class="version">v.__DEPLOY_VERSION__</div>
     </div>
 
     <!-- Live Viewer -->
