--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Squat Monitor - MoveNet</title>
     
     <!-- Load TensorFlow.js -->
@@ -15,40 +18,71 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
+        :root {
+            --md-bg: #f6f5fb;
+            --md-surface: #ffffff;
+            --md-surface-alt: #fef7ff;
+            --md-outline: rgba(22, 22, 22, 0.08);
+            --md-primary: #6750a4;
+            --md-primary-dark: #4f378b;
+            --md-secondary: #03dac6;
+            --md-error: #b3261e;
+            --md-text: #1d1b20;
+            --md-muted: #5f5f5f;
+        }
+
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f0f2f5;
+            font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: var(--md-bg);
+            color: var(--md-text);
             margin: 0;
-            padding: 20px;
+            padding: 32px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            min-height: 100vh;
         }
 
-        h1 { margin-bottom: 5px; font-size: 1em; }
+        .app-shell {
+            width: 100%;
+            max-width: 720px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
+            position: relative;
+            z-index: 1;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 1.35rem;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            color: var(--md-primary-dark);
+        }
 
         .header-container {
             width: 100%;
-            max-width: 640px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 10px;
             box-sizing: border-box;
+            padding: 20px 28px;
+            background: var(--md-surface-alt);
+            border-radius: 28px;
+            box-shadow: 0 18px 40px rgba(15, 15, 15, 0.08);
         }
 
         /* Container for the live view */
         .viewer-container {
             position: relative;
-            width: 100%; /* Take full width of its parent */
-            max-width: 640px; /* Max width as before */
+            width: 100%;
             padding-top: 75%; /* 4:3 Aspect Ratio (480 / 640 = 0.75) */
-            height: 0; /* Important for padding-top trick */
-            background: #000;
-            border-radius: 8px;
+            height: 0;
+            background: linear-gradient(135deg, rgba(103,80,164,0.8), rgba(3,218,198,0.55));
+            border-radius: 32px;
             overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
+            box-shadow: 0 24px 60px rgba(15, 15, 15, 0.18);
             box-sizing: border-box;
         }
 
@@ -65,15 +99,31 @@
 
         .stats-overlay {
             position: absolute;
-            top: 10px;
-            left: 10px;
-            background: rgba(0, 0, 0, 0.7);
-            color: #00ffcc;
-            padding: 10px;
-            border-radius: 4px;
-            font-size: 18px;
+            top: 16px;
+            left: 16px;
+            background: rgba(255, 255, 255, 0.92);
+            color: var(--md-muted);
+            padding: 14px 18px;
+            border-radius: 20px;
+            font-size: 0.95rem;
             z-index: 10;
             pointer-events: none;
+            box-shadow: 0 12px 24px rgba(15, 15, 15, 0.2);
+            backdrop-filter: blur(6px);
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+
+        .stats-overlay div {
+            display: flex;
+            justify-content: space-between;
+            gap: 12px;
+        }
+
+        .stats-overlay span {
+            font-weight: 600;
+            color: var(--md-primary-dark);
         }
 
         .instruction-screen {
@@ -90,6 +140,9 @@
             box-sizing: border-box;
             text-align: center;
             z-index: 5;
+            background: linear-gradient(135deg, rgba(15, 15, 15, 0.9), rgba(25, 25, 25, 0.65));
+            color: white;
+            backdrop-filter: blur(4px);
         }
 
         .instruction-screen.hidden {
@@ -98,31 +151,44 @@
 
         .instruction-text {
             color: #fff;
-            font-size: 18px;
-            line-height: 1.5;
-            margin-bottom: 20px;
-            max-width: 400px;
+            font-size: 1.1rem;
+            line-height: 1.6;
+            margin-bottom: 24px;
+            max-width: 420px;
         }
 
         .instruction-screen button {
-            padding: 12px 40px;
-            font-size: 20px;
+            padding: 14px 48px;
+            font-size: 1rem;
             cursor: pointer;
             border: none;
-            border-radius: 4px;
-            background: #28a745;
-            color: white;
+            border-radius: 999px;
+            background: var(--md-secondary);
+            color: #042f2e;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+            box-shadow: 0 18px 35px rgba(3, 218, 198, 0.4);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
         .instruction-screen button:hover {
-            background: #218838;
+            transform: translateY(-1px);
+            box-shadow: 0 20px 40px rgba(3, 218, 198, 0.5);
         }
 
         .stop-overlay {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 16px;
+            right: 16px;
             z-index: 15;
+            display: flex;
+            gap: 12px;
+            background: transparent;
+            padding: 0;
+            border-radius: 0;
+            backdrop-filter: none;
+            box-shadow: none;
         }
 
         .stop-overlay.hidden {
@@ -133,58 +199,71 @@
             display: none;
         }
 
-        .stop-overlay {
-            display: flex;
-            gap: 10px;
-        }
-
         .stop-overlay button {
-            padding: 8px 20px;
-            font-size: 16px;
+            padding: 10px 20px;
+            font-size: 0.85rem;
             cursor: pointer;
             border: none;
-            border-radius: 4px;
-            color: white;
+            border-radius: 999px;
+            font-weight: 600;
+            letter-spacing: 0.08em;
+            text-transform: uppercase;
+            transition: transform 0.15s ease, box-shadow 0.15s ease;
         }
 
         .stop-overlay button.stop-btn {
-            background: #dc3545;
+            background: linear-gradient(120deg, var(--md-error), #7f1d1d);
+            color: #fff;
+            box-shadow: 0 10px 24px rgba(179, 38, 30, 0.45);
         }
 
         .stop-overlay button.stop-btn:hover {
-            background: #c82333;
+            transform: translateY(-1px);
+            box-shadow: 0 12px 26px rgba(179, 38, 30, 0.6);
         }
 
         .stop-overlay button.reset-btn {
-            background: #ffc107;
+            background: rgba(255, 255, 255, 0.9);
+            color: var(--md-primary-dark);
+            box-shadow: 0 8px 20px rgba(15, 15, 15, 0.2);
         }
 
         .stop-overlay button.reset-btn:hover {
-            background: #e0a800;
+            transform: translateY(-1px);
+            box-shadow: 0 10px 24px rgba(15, 15, 15, 0.25);
         }
 
         /* Layout for charts */
         .charts-wrapper {
             width: 100%;
-            max-width: 640px;
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 24px;
             box-sizing: border-box;
         }
 
         .chart-card {
-            background: white;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+            background: var(--md-surface);
+            padding: 20px 24px;
+            border-radius: 28px;
+            box-shadow: 0 16px 40px rgba(15, 15, 15, 0.08);
             box-sizing: border-box;
             width: 100%;
             min-width: 0;
+            border: 1px solid var(--md-outline);
+        }
+
+        .chart-card h3 {
+            margin: 0 0 12px;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            color: var(--md-primary-dark);
+            text-transform: uppercase;
+            font-size: 0.95rem;
         }
 
         .history-viewer {
-            margin-top: 20px;
+            margin-top: 0;
             display: block;
         }
 
@@ -194,64 +273,66 @@
 
         .history-controls {
             display: flex;
-            flex-direction: column-reverse;
-            gap: 8px;
-            margin-bottom: 10px;
+            flex-direction: column;
+            gap: 12px;
+            margin-bottom: 16px;
         }
 
         .history-controls h4 {
             margin: 0;
             font-size: 0.9em;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-top: 0.33em;
-            margin-bottom: 0.5em;
+            letter-spacing: 0.04em;
+            color: var(--md-muted);
+            font-weight: 500;
         }
 
         .nav-buttons {
             display: flex;
-            gap: 8px;
-            justify-content: flex-end;
+            gap: 10px;
+            justify-content: flex-start;
         }
 
-        .nav-buttons button, .delete-btn {
-            padding: 4px 10px;
-            font-size: 18px;
+        .nav-buttons button,
+        .delete-btn {
+            width: 44px;
+            height: 44px;
+            font-size: 1rem;
             cursor: pointer;
-            border: none;
-            border-radius: 4px;
-            background: #007bff;
-            color: white;
-            min-width: 36px;
-            height: 32px;
+            border-radius: 16px;
+            border: 1px solid var(--md-outline);
+            background: var(--md-surface);
+            color: var(--md-primary-dark);
             display: flex;
             align-items: center;
             justify-content: center;
+            box-shadow: 0 10px 24px rgba(15, 15, 15, 0.15);
+            transition: transform 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
         }
 
-        .nav-buttons button:hover, .delete-btn:hover {
-            background: #0056b3;
+        .nav-buttons button:hover,
+        .delete-btn:hover {
+            transform: translateY(-1px);
+            box-shadow: 0 12px 26px rgba(15, 15, 15, 0.2);
         }
 
         .nav-buttons button:disabled {
-            background: #ccc;
+            background: #e4e1ec;
+            color: #b1a7c8;
             cursor: not-allowed;
+            box-shadow: none;
         }
 
         .delete-btn {
-            background: #dc3545;
-        }
-
-        .delete-btn:hover {
-            background: #c82333;
+            background: linear-gradient(135deg, var(--md-error), #7f1d1d);
+            color: #fff;
+            border: none;
         }
 
         .all-squats-grid {
             display: none;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 15px;
-            margin-top: 20px;
+            grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+            gap: 24px;
+            margin-top: 12px;
         }
 
         .all-squats-grid.visible {
@@ -260,52 +341,74 @@
 
         .bottom-controls {
             width: 100%;
-            max-width: 640px;
-            margin-top: 20px;
+            margin-top: 8px;
             display: flex;
-            gap: 10px;
+            gap: 16px;
             justify-content: center;
             box-sizing: border-box;
         }
 
         .bottom-controls button {
-            padding: 10px 20px;
-            font-size: 16px;
+            padding: 14px 24px;
+            font-size: 0.95rem;
             cursor: pointer;
             border: none;
-            border-radius: 4px;
-            background: #28a745;
+            border-radius: 999px;
+            background: var(--md-primary);
             color: white;
+            letter-spacing: 0.06em;
+            text-transform: uppercase;
+            font-weight: 600;
+            flex: 1;
+            box-shadow: 0 18px 40px rgba(103, 80, 164, 0.35);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
 
         .bottom-controls button:hover {
-            background: #218838;
+            transform: translateY(-1px);
+            box-shadow: 0 22px 45px rgba(103, 80, 164, 0.45);
         }
 
         .bottom-controls button.delete-all {
-            background: #dc3545;
+            background: var(--md-error);
+            box-shadow: 0 18px 40px rgba(179, 38, 30, 0.45);
         }
 
         .bottom-controls button.delete-all:hover {
-            background: #c82333;
+            box-shadow: 0 22px 48px rgba(179, 38, 30, 0.55);
         }
 
         @media (max-width: 800px) {
-            .viewer-container { width: 100%; height: auto; aspect-ratio: 4/3; }
+            body { padding: 20px; }
+            .app-shell { max-width: 100%; }
+            .header-container,
+            .chart-card { border-radius: 20px; padding: 18px; }
+            .viewer-container { width: 100%; height: auto; aspect-ratio: 4/3; border-radius: 24px; }
             canvas#output { width: 100%; height: 100%; }
             .all-squats-grid { grid-template-columns: 1fr; }
+            .stop-overlay { flex-direction: column; right: 12px; }
+            .bottom-controls { flex-direction: column; }
+            .bottom-controls button { width: 100%; }
         }
 
-        .version {
-            font-size: 10px;
-            color: #888;
+        .version-tag {
+            position: fixed;
+            top: 4px;
+            right: 10px;
+            font-size: 0.65rem;
+            color: rgba(93, 93, 107, 0.7);
+            letter-spacing: 0.16em;
+            text-transform: uppercase;
+            pointer-events: none;
+            z-index: 0;
         }
     </style>
 </head>
 <body>
+    <div class="version-tag">v.__DEPLOY_VERSION__</div>
+    <div class="app-shell">
     <div class="header-container">
         <h1>Squat Angle Monitor</h1>
-        <div class="version">v.__DEPLOY_VERSION__</div>
     </div>
 
     <!-- Live Viewer -->
@@ -358,6 +461,7 @@
     <div class="bottom-controls">
         <button id="showAllBtn" onclick="toggleShowAll()">Show All</button>
         <button class="delete-all" onclick="deleteAllSquats()">Delete All</button>
+    </div>
     </div>
 
     <script>
@@ -621,7 +725,7 @@
             } else {
                 // Data not usable - show placeholders
                 document.getElementById('angleDisplay').innerText = '-';
-                document.getElementById('angleDisplay').style.color = '#00ffcc';
+                document.getElementById('angleDisplay').style.color = 'var(--md-primary-dark)';
                 document.getElementById('statusDisplay').innerText = '-';
                 return;
             }
@@ -630,7 +734,7 @@
             state.currentAngle = Math.round(angle);
 
             document.getElementById('angleDisplay').innerText = state.currentAngle + '°';
-            document.getElementById('angleDisplay').style.color = state.currentAngle < CONF.deepThresh ? '#00ff00' : '#00ffcc';
+            document.getElementById('angleDisplay').style.color = 'var(--md-primary-dark)';
 
             const now = Date.now();
 
